[project]
name = "credit-card-statement-converter"
version = "0.1.0"
description = """
This script converts the csv of the credit card's statement. Currently supports the American Experess, Mitsui Sumitomo VISA.
"""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.1",
]
